--- a/smackChat/Base.lproj/Main.storyboard
+++ b/smackChat/Base.lproj/Main.storyboard
@@ -177,6 +177,7 @@
                     </view>
                     <connections>
                         <outlet property="loginBtn" destination="o7E-O4-9gN" id="3GT-Mr-PtF"/>
+                        <outlet property="userImg" destination="M2C-Mr-gPl" id="Fxq-Sa-qT7"/>
                         <segue destination="4u6-lY-Xfx" kind="show" identifier="toLogin" id="i3b-mh-MlT"/>
                     </connections>
                 </viewController>
@@ -369,14 +370,14 @@
                                             <constraint firstAttribute="height" constant="2" id="w8V-UG-LvS"/>
                                         </constraints>
                                     </view>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8P5-k8-WH8">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Gt-dv-PbR">
                                         <rect key="frame" x="0.0" y="60" width="250" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="250" id="X68-Zt-AqF"/>
+                                            <constraint firstAttribute="width" constant="250" id="tWK-sh-MmM"/>
                                         </constraints>
                                         <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PnB-Qo-vfL">
                                         <rect key="frame" x="0.0" y="104" width="250" height="2"/>
@@ -385,14 +386,14 @@
                                             <constraint firstAttribute="height" constant="2" id="Tbl-fo-KLu"/>
                                         </constraints>
                                     </view>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Gt-dv-PbR">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8P5-k8-WH8">
                                         <rect key="frame" x="0.0" y="120" width="250" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="250" id="tWK-sh-MmM"/>
+                                            <constraint firstAttribute="width" constant="250" id="X68-Zt-AqF"/>
                                         </constraints>
                                         <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uY2-Ac-NvF">
                                         <rect key="frame" x="0.0" y="164" width="250" height="2"/>
