--- a/smackChat/Base.lproj/Main.storyboard
+++ b/smackChat/Base.lproj/Main.storyboard
@@ -86,15 +86,78 @@
                                     <action selector="sendMsgPressed:" destination="IwK-G5-kNb" eventType="touchUpInside" id="9Ow-cy-52K"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DKN-zR-m9f">
+                                <rect key="frame" x="0.0" y="77" width="375" height="520"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="messageCell" rowHeight="80" id="xlA-C7-aX4" customClass="MessageCell" customModule="smackChat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xlA-C7-aX4" id="TeK-Pz-pLX">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bg0-Vx-qJL" customClass="CircleImage" customModule="smackChat" customModuleProvider="target">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="ia2-i1-ila"/>
+                                                        <constraint firstAttribute="height" constant="50" id="mwy-s4-5Pg"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Justin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zrW-dY-vkC">
+                                                    <rect key="frame" x="70" y="8" width="44" height="20"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="16"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wud-At-fxF">
+                                                    <rect key="frame" x="70" y="36" width="285" height="21"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="12:33 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58G-nj-9wG">
+                                                    <rect key="frame" x="120" y="8" width="60" height="20"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="58G-nj-9wG" firstAttribute="centerY" secondItem="zrW-dY-vkC" secondAttribute="centerY" id="7RY-ac-bvA"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Wud-At-fxF" secondAttribute="trailing" constant="12" id="EkC-bn-YKT"/>
+                                                <constraint firstItem="zrW-dY-vkC" firstAttribute="leading" secondItem="Bg0-Vx-qJL" secondAttribute="trailing" constant="12" id="F1M-PE-5Gc"/>
+                                                <constraint firstItem="zrW-dY-vkC" firstAttribute="top" secondItem="Bg0-Vx-qJL" secondAttribute="top" id="G6X-Ry-tMb"/>
+                                                <constraint firstItem="58G-nj-9wG" firstAttribute="leading" secondItem="zrW-dY-vkC" secondAttribute="trailing" constant="6" id="In7-cR-8Yj"/>
+                                                <constraint firstItem="Bg0-Vx-qJL" firstAttribute="leading" secondItem="TeK-Pz-pLX" secondAttribute="leadingMargin" id="LIc-G5-JIw"/>
+                                                <constraint firstItem="Wud-At-fxF" firstAttribute="top" secondItem="zrW-dY-vkC" secondAttribute="bottom" constant="8" id="X9b-7F-hha"/>
+                                                <constraint firstItem="Wud-At-fxF" firstAttribute="leading" secondItem="Bg0-Vx-qJL" secondAttribute="trailing" constant="12" id="kyT-CA-WXA"/>
+                                                <constraint firstItem="Bg0-Vx-qJL" firstAttribute="top" secondItem="TeK-Pz-pLX" secondAttribute="topMargin" id="pq3-TE-3k8"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Wud-At-fxF" secondAttribute="bottom" constant="15" id="yju-AF-9WV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageBodyLbl" destination="Wud-At-fxF" id="MSp-cf-UbV"/>
+                                            <outlet property="timeStampLbl" destination="58G-nj-9wG" id="gBn-Rd-AHe"/>
+                                            <outlet property="userImg" destination="Bg0-Vx-qJL" id="fbb-CI-HwH"/>
+                                            <outlet property="userNameLbl" destination="zrW-dY-vkC" id="O0S-V9-R0G"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="DV7-6z-Pk1" firstAttribute="bottom" secondItem="sz8-up-kmL" secondAttribute="bottom" id="4uO-dw-NVj"/>
                             <constraint firstItem="DDM-v4-1qV" firstAttribute="leading" secondItem="sz8-up-kmL" secondAttribute="leading" id="A3j-2p-KlC"/>
+                            <constraint firstItem="DV7-6z-Pk1" firstAttribute="top" secondItem="DKN-zR-m9f" secondAttribute="bottom" constant="30" id="DdS-0d-2l7"/>
+                            <constraint firstItem="sz8-up-kmL" firstAttribute="trailing" secondItem="DKN-zR-m9f" secondAttribute="trailing" id="O7A-b3-MPM"/>
                             <constraint firstItem="DDM-v4-1qV" firstAttribute="top" secondItem="1wM-cJ-WgD" secondAttribute="top" id="PDP-ls-QAE"/>
+                            <constraint firstItem="DKN-zR-m9f" firstAttribute="leading" secondItem="sz8-up-kmL" secondAttribute="leading" id="PDr-fy-SpH"/>
                             <constraint firstItem="sz8-up-kmL" firstAttribute="trailing" secondItem="N7i-ib-wpo" secondAttribute="trailing" constant="8" id="Rwc-U2-PTa"/>
                             <constraint firstItem="DDM-v4-1qV" firstAttribute="trailing" secondItem="sz8-up-kmL" secondAttribute="trailing" id="VSc-L0-hEx"/>
                             <constraint firstItem="sz8-up-kmL" firstAttribute="trailing" secondItem="DV7-6z-Pk1" secondAttribute="trailing" id="gia-6n-gY7"/>
+                            <constraint firstItem="DKN-zR-m9f" firstAttribute="top" secondItem="DDM-v4-1qV" secondAttribute="bottom" id="oLN-bJ-IX5"/>
                             <constraint firstItem="N7i-ib-wpo" firstAttribute="centerY" secondItem="DV7-6z-Pk1" secondAttribute="centerY" id="sG1-4f-2sD"/>
                             <constraint firstItem="DV7-6z-Pk1" firstAttribute="leading" secondItem="sz8-up-kmL" secondAttribute="leading" id="ugg-8w-Vca"/>
                         </constraints>
@@ -104,6 +167,7 @@
                         <outlet property="UITextBox" destination="DV7-6z-Pk1" id="4hA-26-fQW"/>
                         <outlet property="channelNameLbl" destination="ZdI-is-xza" id="Xsr-th-63G"/>
                         <outlet property="menuBtn" destination="Zhc-ua-nWa" id="Rhk-3d-ZtE"/>
+                        <outlet property="tableView" destination="DKN-zR-m9f" id="RGb-fE-m4n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AFa-Fa-KkK" userLabel="First Responder" sceneMemberID="firstResponder"/>
